--- a/ia/deepLearning.html
+++ b/ia/deepLearning.html
@@ -65,12 +65,12 @@
                 </div>
                 <h2>Conceptos clave</h2>
                 <ul style="list-style-type: none;">
-                    <li>❍ <marcador class="resaltado4">Red Neuronal:</marcador> Es una estructura compuesta por múltiples capas de neuronas artificiales interconectadas, diseñada para imitar el funcionamiento del cerebro humano.</li>
-                    <li>❍ <marcador class="resaltado4">Neurona Artificial:</marcador> Es una unidad computacional que procesa datos y realiza cálculos en una red neuronal.</li>
-                    <li>❍ <marcador class="resaltado4">Entrenamiento:</marcador> Es el proceso mediante el cual la red neuronal ajusta sus conexiones y parámetros para aprender de los datos proporcionados.</li>
-                    <li>❍ <marcador class="resaltado4">Capas Ocultas:</marcador> Son las capas intermedias entre la entrada y la salida en una red neuronal, donde se extraen y procesan características complejas.</li>
-                    <li>❍ <marcador class="resaltado4">Aprendizaje Profundo Supervisado:</marcador> Es un tipo de entrenamiento donde la red neuronal se entrena con datos etiquetados para hacer predicciones precisas.</li>
-                    <li>❍ <marcador class="resaltado4">Backpropagation:</marcador> Es el algoritmo que se utiliza para ajustar los pesos (parámetros) de las conexiones en una red neuronal durante el entrenamiento.</li>
+                    <li>◘ <marcador class="resaltado4">Red Neuronal:</marcador> Es una estructura compuesta por múltiples capas de neuronas artificiales interconectadas, diseñada para imitar el funcionamiento del cerebro humano.</li>
+                    <li>◘ <marcador class="resaltado4">Neurona Artificial:</marcador> Es una unidad computacional que procesa datos y realiza cálculos en una red neuronal.</li>
+                    <li>◘ <marcador class="resaltado4">Entrenamiento:</marcador> Es el proceso mediante el cual la red neuronal ajusta sus conexiones y parámetros para aprender de los datos proporcionados.</li>
+                    <li>◘ <marcador class="resaltado4">Capas Ocultas:</marcador> Son las capas intermedias entre la entrada y la salida en una red neuronal, donde se extraen y procesan características complejas.</li>
+                    <li>◘ <marcador class="resaltado4">Aprendizaje Profundo Supervisado:</marcador> Es un tipo de entrenamiento donde la red neuronal se entrena con datos etiquetados para hacer predicciones precisas.</li>
+                    <li>◘ <marcador class="resaltado4">Backpropagation:</marcador> Es el algoritmo que se utiliza para ajustar los pesos (parámetros) de las conexiones en una red neuronal durante el entrenamiento.</li>
                 </ul>
                 <h2>Diferencia entre Machine Learning y Deep Learning</h2>
                 <p>La principal diferencia entre Machine Learning y Deep Learning radica en su estructura y alcance dentro del campo de la inteligencia artificial.</p>
@@ -78,20 +78,20 @@
                 <ul>
                 <h6>Machine Learning (Aprendizaje Automático):</h6>
                         <ul style="list-style-type: none;">
-                            <li>✦ <marcador class="resaltado8">Definición:</marcador> El Machine Learning es una rama de la inteligencia artificial que se centra en el desarrollo de algoritmos que permiten a las computadoras aprender a partir de datos sin una programación explícita.</li>
-                            <li>✦ <marcador class="resaltado8">Enfoque:</marcador> El enfoque principal del Machine Learning es aprender patrones y relaciones a partir de los datos de entrenamiento y utilizar ese conocimiento para hacer predicciones o tomar decisiones en nuevos datos no vistos previamente.</li>
-                            <li>✦ <marcador class="resaltado8">Algoritmos:</marcador> Los algoritmos de Machine Learning pueden ser diversos y abarcar diferentes enfoques, como aprendizaje supervisado, no supervisado, semi-supervisado y de refuerzo, entre otros.</li>
-                            <li>✦ <marcador class="resaltado8">Capacidad de representación:</marcador> Los algoritmos de Machine Learning pueden ser poderosos en muchas tareas, pero su capacidad para representar características complejas puede ser limitada en comparación con el Deep Learning.</li>
-                            <li>✦ <marcador class="resaltado8">Requerimientos de datos:</marcador> El rendimiento del Machine Learning depende en gran medida de la calidad y cantidad de los datos de entrenamiento proporcionados.</li>
+                            <li>𖦹 <marcador class="resaltado8">Definición:</marcador> El Machine Learning es una rama de la inteligencia artificial que se centra en el desarrollo de algoritmos que permiten a las computadoras aprender a partir de datos sin una programación explícita.</li>
+                            <li>𖦹 <marcador class="resaltado8">Enfoque:</marcador> El enfoque principal del Machine Learning es aprender patrones y relaciones a partir de los datos de entrenamiento y utilizar ese conocimiento para hacer predicciones o tomar decisiones en nuevos datos no vistos previamente.</li>
+                            <li>𖦹 <marcador class="resaltado8">Algoritmos:</marcador> Los algoritmos de Machine Learning pueden ser diversos y abarcar diferentes enfoques, como aprendizaje supervisado, no supervisado, semi-supervisado y de refuerzo, entre otros.</li>
+                            <li>𖦹 <marcador class="resaltado8">Capacidad de representación:</marcador> Los algoritmos de Machine Learning pueden ser poderosos en muchas tareas, pero su capacidad para representar características complejas puede ser limitada en comparación con el Deep Learning.</li>
+                            <li>𖦹 <marcador class="resaltado8">Requerimientos de datos:</marcador> El rendimiento del Machine Learning depende en gran medida de la calidad y cantidad de los datos de entrenamiento proporcionados.</li>
                         </ul>
                 <br>        
                 <h6>Deep Learning (Aprendizaje Profundo):</h6>
                         <ul style="list-style-type: none;">
-                            <li>✦ <marcador class="resaltado8">Definición:</marcador> El Deep Learning es una subárea del Machine Learning que se basa en redes neuronales artificiales profundas para aprender y realizar tareas más complejas y abstractas.</li>
-                            <li>✦ <marcador class="resaltado8">Enfoque:</marcador> El enfoque central del Deep Learning es utilizar redes neuronales profundas, que son estructuras con múltiples capas interconectadas, para aprender automáticamente características y patrones cada vez más complejos en los datos.</li>
-                            <li>✦ <marcador class="resaltado8">Redes Neuronales Profundas:</marcador> En el Deep Learning, las redes neuronales profundas tienen múltiples capas ocultas que permiten extraer y procesar características en distintos niveles de abstracción.</li>
-                            <li>✦ <marcador class="resaltado8">Capacidad de representación:</marcador> Las redes neuronales profundas tienen una alta capacidad de representación y pueden aprender características altamente complejas y abstracciones, lo que las hace especialmente efectivas en tareas de visión por computadora, procesamiento del lenguaje natural y otras tareas complejas.</li>
-                            <li>✦ <marcador class="resaltado8">Requerimientos de datos:</marcador> El entrenamiento de redes neuronales profundas generalmente requiere grandes cantidades de datos y una considerable potencia computacional, lo que puede hacer que su entrenamiento sea más costoso en términos de tiempo y recursos.</li>            
+                            <li>𖦹 <marcador class="resaltado8">Definición:</marcador> El Deep Learning es una subárea del Machine Learning que se basa en redes neuronales artificiales profundas para aprender y realizar tareas más complejas y abstractas.</li>
+                            <li>𖦹 <marcador class="resaltado8">Enfoque:</marcador> El enfoque central del Deep Learning es utilizar redes neuronales profundas, que son estructuras con múltiples capas interconectadas, para aprender automáticamente características y patrones cada vez más complejos en los datos.</li>
+                            <li>𖦹 <marcador class="resaltado8">Redes Neuronales Profundas:</marcador> En el Deep Learning, las redes neuronales profundas tienen múltiples capas ocultas que permiten extraer y procesar características en distintos niveles de abstracción.</li>
+                            <li>𖦹 <marcador class="resaltado8">Capacidad de representación:</marcador> Las redes neuronales profundas tienen una alta capacidad de representación y pueden aprender características altamente complejas y abstracciones, lo que las hace especialmente efectivas en tareas de visión por computadora, procesamiento del lenguaje natural y otras tareas complejas.</li>
+                            <li>𖦹 <marcador class="resaltado8">Requerimientos de datos:</marcador> El entrenamiento de redes neuronales profundas generalmente requiere grandes cantidades de datos y una considerable potencia computacional, lo que puede hacer que su entrenamiento sea más costoso en términos de tiempo y recursos.</li>            
                         </ul>       
                 <br>
                 <p>El Machine Learning es una disciplina más amplia que abarca diversos enfoques para el aprendizaje a partir de datos, mientras que el Deep Learning es una técnica específica dentro del Machine Learning que utiliza redes neuronales profundas para aprender patrones y características complejas en grandes conjuntos de datos. El Deep Learning ha demostrado ser especialmente efectivo en tareas de alto nivel, como reconocimiento de imágenes, procesamiento del lenguaje natural y juegos de estrategia, impulsando avances significativos en el campo de la inteligencia artificial.</p>
