--- a/ia/numpy.html
+++ b/ia/numpy.html
@@ -55,9 +55,9 @@
                 </div>
                 <h2>Principales Usos de NumPy</h2>
                 <ul style="list-style-type: none;">
-                    <li>❍ <marcador class="resaltado4">Manipulación de Datos Numéricos: </marcador>NumPy facilita la manipulación de datos numéricos al proporcionar una amplia gama de funciones y operaciones optimizadas para trabajar con matrices y arreglos. Esto incluye operaciones aritméticas básicas, funciones matemáticas, generación de números aleatorios, y más.</li>
-                    <li>❍ <marcador class="resaltado4">Álgebra Lineal: </marcador>NumPy ofrece un conjunto completo de funciones para realizar operaciones de álgebra lineal, como cálculo de determinantes, inversas de matrices, descomposición de valores singulares (SVD), eigenvalores y eigenvectores, entre otros.</li>
-                    <li>❍ <marcador class="resaltado4">Procesamiento de Imágenes y Señales: </marcador>NumPy es ampliamente utilizado en el procesamiento de imágenes y señales debido a su capacidad para manejar matrices multidimensionales de manera eficiente. La biblioteca ofrece funciones para cargar, manipular y analizar imágenes y señales de manera rápida y sencilla.</li>
+                    <li>◘ <marcador class="resaltado4">Manipulación de Datos Numéricos: </marcador>NumPy facilita la manipulación de datos numéricos al proporcionar una amplia gama de funciones y operaciones optimizadas para trabajar con matrices y arreglos. Esto incluye operaciones aritméticas básicas, funciones matemáticas, generación de números aleatorios, y más.</li>
+                    <li>◘ <marcador class="resaltado4">Álgebra Lineal: </marcador>NumPy ofrece un conjunto completo de funciones para realizar operaciones de álgebra lineal, como cálculo de determinantes, inversas de matrices, descomposición de valores singulares (SVD), eigenvalores y eigenvectores, entre otros.</li>
+                    <li>◘ <marcador class="resaltado4">Procesamiento de Imágenes y Señales: </marcador>NumPy es ampliamente utilizado en el procesamiento de imágenes y señales debido a su capacidad para manejar matrices multidimensionales de manera eficiente. La biblioteca ofrece funciones para cargar, manipular y analizar imágenes y señales de manera rápida y sencilla.</li>
                 </ul>
                 <h2>Instalación</h2>
                 <p>Numpy es una librería de Python que puede instalarse fácilmente utilizando pip, el gestor de paquetes de Python.</p>
