--- a/ia/opencv.html
+++ b/ia/opencv.html
@@ -58,10 +58,10 @@
 
                 <h2>Usos Comunes de OpenCV</h2>
                 <ul style="list-style-type: none;">
-                    <li>❍ <marcador class="resaltado4">Reconocimiento Facial: </marcador>Desde autenticación biométrica hasta etiquetado de fotos, OpenCV es una herramienta clave en este campo.</li>
-                    <li>❍ <marcador class="resaltado4">Detección de Objetos: </marcador>Se utiliza ampliamente en aplicaciones como conducción autónoma y sistemas de vigilancia.</li>
-                    <li>❍ <marcador class="resaltado4">Procesamiento de Imágenes Médicas: </marcador>En aplicaciones como diagnóstico asistido por computadora y análisis de imágenes médicas.</li>
-                    <li>❍ <marcador class="resaltado4">Realidad Aumentada: </marcador>Para superponer objetos virtuales en escenas del mundo real utilizando datos de video.</li>
+                    <li>◘ <marcador class="resaltado4">Reconocimiento Facial: </marcador>Desde autenticación biométrica hasta etiquetado de fotos, OpenCV es una herramienta clave en este campo.</li>
+                    <li>◘ <marcador class="resaltado4">Detección de Objetos: </marcador>Se utiliza ampliamente en aplicaciones como conducción autónoma y sistemas de vigilancia.</li>
+                    <li>◘ <marcador class="resaltado4">Procesamiento de Imágenes Médicas: </marcador>En aplicaciones como diagnóstico asistido por computadora y análisis de imágenes médicas.</li>
+                    <li>◘ <marcador class="resaltado4">Realidad Aumentada: </marcador>Para superponer objetos virtuales en escenas del mundo real utilizando datos de video.</li>
                 </ul>
                 <div class="blog-image-grande">
                     <img src="media/opencv1.jpg" alt="">
