--- a/ia/machineLearning.html
+++ b/ia/machineLearning.html
@@ -65,12 +65,12 @@
                 </div>
                 <h2>Conceptos clave</h2>
                 <ul style="list-style-type: none;">
-                    <li>❍ <marcador class="resaltado4">Algoritmo:</marcador> Es una secuencia de pasos que una computadora sigue para resolver un problema o realizar una tarea específica.</li>
-                    <li>❍ <marcador class="resaltado4">Datos de entrenamiento:</marcador> Son los ejemplos que utilizamos para enseñar al algoritmo y permitirle aprender patrones y relaciones.</li>
-                    <li>❍ <marcador class="resaltado4">Inteligencia Artificial:</marcador> Es un campo de la informática que busca crear máquinas capaces de realizar tareas que normalmente requieren inteligencia humana.</li>
-                    <li>❍ <marcador class="resaltado4">Predicción:</marcador> Es la capacidad del algoritmo de hacer estimaciones o conjeturas sobre resultados futuros basados en datos históricos.</li>
-                    <li>❍ <marcador class="resaltado4">Aprendizaje Supervisado:</marcador> Es un tipo de entrenamiento donde el algoritmo recibe datos etiquetados con resultados conocidos y se necesita de ajustes para hacer predicciones precisas.</li>
-                    <li>❍ <marcador class="resaltado4">Aprendizaje No Supervisado:</marcador> Es un tipo de entrenamiento donde el algoritmo trabaja con datos no etiquetados y busca descubrir patrones y estructuras por sí mismo.</li>
+                    <li>◘ <marcador class="resaltado4">Algoritmo:</marcador> Es una secuencia de pasos que una computadora sigue para resolver un problema o realizar una tarea específica.</li>
+                    <li>◘ <marcador class="resaltado4">Datos de entrenamiento:</marcador> Son los ejemplos que utilizamos para enseñar al algoritmo y permitirle aprender patrones y relaciones.</li>
+                    <li>◘ <marcador class="resaltado4">Inteligencia Artificial:</marcador> Es un campo de la informática que busca crear máquinas capaces de realizar tareas que normalmente requieren inteligencia humana.</li>
+                    <li>◘ <marcador class="resaltado4">Predicción:</marcador> Es la capacidad del algoritmo de hacer estimaciones o conjeturas sobre resultados futuros basados en datos históricos.</li>
+                    <li>◘ <marcador class="resaltado4">Aprendizaje Supervisado:</marcador> Es un tipo de entrenamiento donde el algoritmo recibe datos etiquetados con resultados conocidos y se necesita de ajustes para hacer predicciones precisas.</li>
+                    <li>◘ <marcador class="resaltado4">Aprendizaje No Supervisado:</marcador> Es un tipo de entrenamiento donde el algoritmo trabaja con datos no etiquetados y busca descubrir patrones y estructuras por sí mismo.</li>
                 </ul>
                 <div class="blog-image">
                     <img src="media/machine5.jpg" alt="">
