--- a/ia/pandas.html
+++ b/ia/pandas.html
@@ -92,10 +92,10 @@
                 <h2>Pandas: Una Herramienta Esencial para el Análisis de Datos</h2>
                 <p>Pandas se destaca como una herramienta esencial en el arsenal de cualquier científico de datos debido a su capacidad para trabajar con datos de manera eficiente y efectiva. Algunas de las características clave de Pandas incluyen:</p>
                 <ul style="list-style-type: none;">
-                    <li>❍ <marcador class="resaltado4">DataFrame:</marcador> La estructura de datos principal de Pandas es el DataFrame, que permite almacenar y manipular datos tabulares de manera flexible.</li>
-                    <li>❍ <marcador class="resaltado4">Funciones de Limpieza y Preprocesamiento:</marcador> Pandas ofrece una amplia gama de funciones para limpiar y preprocesar datos, incluyendo la eliminación de valores nulos, la detección y eliminación de duplicados, y la transformación de datos.</li>
-                    <li>❍ <marcador class="resaltado4">Operaciones de Filtrado y Selección:</marcador> Pandas facilita la selección y filtrado de datos basados en condiciones específicas, lo que permite a los usuarios extraer rápidamente subconjuntos de datos de interés.</li>
-                    <li>❍ <marcador class="resaltado4">Operaciones de Agrupación y Agregación:</marcador> Pandas permite realizar operaciones de agrupación y agregación en conjuntos de datos, lo que facilita el análisis y la visualización de datos resumidos.</li>
+                    <li>◘ <marcador class="resaltado4">DataFrame:</marcador> La estructura de datos principal de Pandas es el DataFrame, que permite almacenar y manipular datos tabulares de manera flexible.</li>
+                    <li>◘ <marcador class="resaltado4">Funciones de Limpieza y Preprocesamiento:</marcador> Pandas ofrece una amplia gama de funciones para limpiar y preprocesar datos, incluyendo la eliminación de valores nulos, la detección y eliminación de duplicados, y la transformación de datos.</li>
+                    <li>◘ <marcador class="resaltado4">Operaciones de Filtrado y Selección:</marcador> Pandas facilita la selección y filtrado de datos basados en condiciones específicas, lo que permite a los usuarios extraer rápidamente subconjuntos de datos de interés.</li>
+                    <li>◘ <marcador class="resaltado4">Operaciones de Agrupación y Agregación:</marcador> Pandas permite realizar operaciones de agrupación y agregación en conjuntos de datos, lo que facilita el análisis y la visualización de datos resumidos.</li>
                 </ul>
                 <br>
                 <p>Pandas es una herramienta poderosa y versátil que proporciona una base sólida para el análisis de datos en Python. Su combinación de facilidad de uso y potencia la convierte en una opción popular tanto para principiantes como para profesionales en el campo del aprendizaje automático y la ciencia de datos.</p>
