--- a/network/comandos.html
+++ b/network/comandos.html
@@ -43,8 +43,7 @@
                 <h1>Comandos Básicos en Dispositivos de Red</h1>
                 <p>Los equipos de red Huawei y Cisco son ampliamente utilizados en entornos de red para proporcionar conectividad confiable y segura. Aquí se presentan algunos comandos básicos para la administración y configuración de estos equipos.</p>
                 
-                <h3>Cisco</h3>
-
+                <h11 class="metallic-text">Cisco</h11>
                 <div class="contenedor">
                     <div class="etiqueta">
                         Acceder al Modo Privilegiado.
@@ -253,7 +252,7 @@ service password-encryption</textarea>
                     <img src="media/comandos1.jpg" alt="">
                 </div>
 
-                <h3>Huawei</h3>
+                <h11 class="metallic-text">Huawei</h11>
 
                 <div class="contenedor">
                     <div class="etiqueta">
