--- a/electronica/capacitor.html
+++ b/electronica/capacitor.html
@@ -100,7 +100,7 @@
                     <p>     V = Tensión entre las placas del capacitor en voltios (V)</p>
                 </center>
                 <br>
-                <h5>Ejemplo de cálculo de capacitancia:</h5>
+                <h5>Ejemplo de cálculo:</h5>
                 <p>Si tienes un capacitor que almacena una carga de 10 coulombs y la tensión entre sus placas es de 5 voltios, la capacitancia sería:</p>
                 <br>
                 <p><marcador class="resaltado7">C = 10 C / 5 V = 2 F (2 faradios)</marcador></p>
