--- a/electronica/inductancia.html
+++ b/electronica/inductancia.html
@@ -119,7 +119,7 @@
                     <p>     l = Longitud de la bobina en metros (m)</p>
                 </center>
                 <br>    
-                <h5>Ejemplo de cálculo de inductancia:</h5>
+                <h5>Ejemplo de cálculo:</h5>
                 <p>Encuentre la inductancia de una bobina de núcleo de aire con un diametro de la sección transversal de 4 mm, 100 vueltas y una longitud de 100 mm.</p>
                 <br>
                 <p>A = &#960;(2x10<sup>-3</sup>)<sup>2</sup> = 12.57x10<sup>-6</sup></p>
