--- a/ia/pytorch.html
+++ b/ia/pytorch.html
@@ -132,11 +132,11 @@ print(tensor)
                     </ul>
                 </ol>
                 <h2>Funcionalidades</h2>
-                <ul>
-                    <li><marcador class="resaltado4">TorchVision: </marcador>Una biblioteca auxiliar que ofrece utilidades para la visión por computadora, incluyendo transformaciones de imágenes y modelos preentrenados.</li>
-                    <li><marcador class="resaltado4">TorchScript: </marcador>Permite convertir modelos de PyTorch en un formato más optimizado y serializado, lo que facilita la implementación en entornos de producción.</li>
-                    <li><marcador class="resaltado4">Autograd: </marcador>Un motor automático de diferenciación que calcula gradientes, esencial para entrenar redes neuronales mediante backpropagation.</li>
-                    <li><marcador class="resaltado4">PyTorch Lightning: </marcador>Una herramienta que estructura los modelos de PyTorch, permitiendo desarrollar y entrenar de manera más eficiente al separar la lógica del modelo y la lógica del entrenamiento.</li>
+                <ul style="list-style-type: none;">
+                    <li>◘ <marcador class="resaltado4">TorchVision: </marcador>Una biblioteca auxiliar que ofrece utilidades para la visión por computadora, incluyendo transformaciones de imágenes y modelos preentrenados.</li>
+                    <li>◘ <marcador class="resaltado4">TorchScript: </marcador>Permite convertir modelos de PyTorch en un formato más optimizado y serializado, lo que facilita la implementación en entornos de producción.</li>
+                    <li>◘ <marcador class="resaltado4">Autograd: </marcador>Un motor automático de diferenciación que calcula gradientes, esencial para entrenar redes neuronales mediante backpropagation.</li>
+                    <li>◘ <marcador class="resaltado4">PyTorch Lightning: </marcador>Una herramienta que estructura los modelos de PyTorch, permitiendo desarrollar y entrenar de manera más eficiente al separar la lógica del modelo y la lógica del entrenamiento.</li>
                 </ul>
                 <div class="blog-image">
                     <img src="media/pytorch3.jpg" alt="">
