--- a/ia/llm.html
+++ b/ia/llm.html
@@ -309,7 +309,7 @@ print(agente.run("¿Quién fue Nikola Tesla?"))
                       <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
-                <p>El siguiente script en Python utiliza procesamiento de lenguaje natural (NLP) para resumir textos de manera inteligente y adaptada a la comprensión de diferentes grupos de edad.</p>
+                <p>⌨️ El siguiente script en Python utiliza procesamiento de lenguaje natural (NLP) para resumir textos de manera inteligente y adaptada a la comprensión de diferentes grupos de edad.</p>
                 <div class="archivo">from transformers import pipeline
 from langchain_huggingface import HuggingFacePipeline
 from langchain.prompts import PromptTemplate
@@ -345,7 +345,7 @@ print("\n🔹 **Generated Summary:**")
 print(summary)
                 </div>
                 <h6>Ejemplo 2</h6>
-                <p>Este script es una herramienta avanzada que combina la generación de resúmenes con la capacidad de responder preguntas sobre el contenido resumido. Utiliza modelos preentrenados de Hugging Face y la integración con LangChain para ofrecer una experiencia completa de procesamiento de lenguaje natural (NLP).</p>
+                <p>⌨️ Este script es una herramienta avanzada que combina la generación de resúmenes con la capacidad de responder preguntas sobre el contenido resumido. Utiliza modelos preentrenados de Hugging Face y la integración con LangChain para ofrecer una experiencia completa de procesamiento de lenguaje natural (NLP).</p>
                 <div class="archivo">from transformers import pipeline
 from langchain_huggingface import HuggingFacePipeline
 from langchain.prompts import PromptTemplate
@@ -412,7 +412,7 @@ while True:
                 </div>
                 <h6>Ejemplo 3</h6>
                 <p>Para el siguiente ejemplo, debes instalar Ollama en tu sistema y luego utilizarlo desde la terminal o en Python. Aquí tienes los pasos detallados:</p>
-                <p>Ollama está disponible para Windows, macOS y Linux. Descárgalo desde la <a href="https://ollama.com/download" target="blank">web oficial</a></p>
+                <p>Ollama está disponible para Windows, macOS y Linux. Descárgalo desde la <a href="https://ollama.com/download" target="blank">web oficial</a>.</p>
                 <div class="contenedor">
                     <div class="etiqueta">Verifica que Ollama está instalado.</div>
                     <div class="comandos">
@@ -450,7 +450,7 @@ model = OllamaLLM(model="llama3")
 result = model.invoke(input="¿Qué es la inteligencia artificial?")
 print(result)
                 </div>
-                <p>El siguiente script implementa un chatbot interactivo utilizando un modelo de lenguaje local a través de Ollama y el framework LangChain. El chatbot es capaz de mantener una conversación con el usuario, recordando el historial de la conversación para proporcionar respuestas contextualmente relevantes.</p>
+                <p>⌨️ El siguiente script implementa un chatbot interactivo utilizando un modelo de lenguaje local a través de Ollama y el framework LangChain. El chatbot es capaz de mantener una conversación con el usuario, recordando el historial de la conversación para proporcionar respuestas contextualmente relevantes.</p>
                 <div class="archivo">from langchain_ollama import OllamaLLM
 from langchain_core.prompts import ChatPromptTemplate
 
