--- a/ia/llm.html
+++ b/ia/llm.html
@@ -632,6 +632,11 @@ if __name__ == "__main__":
                 <div class="blog-image-grande">
                     <img src="media/llm8.png" alt="">
                 </div>
+                <h6>Ejemplo de uso</h6>
+                <p>Para crear un chatbot en Chatbase, comienza accediendo a la plataforma y configurando un nuevo agente vinculado a la knowledge base de tu sitio web. Este paso es esencial para que el chatbot pueda acceder a la información relevante de tu marca y proporcionar respuestas precisas a tus clientes. Una vez configurado, asigna un prompt claro y efectivo, similar al que se muestra en <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/tree/main/Chatbase" target="blank">este ejemplo</a>, para guiar las interacciones del chatbot y asegurarte de que ofrezca respuestas alineadas con los valores y datos de tu empresa. Este enfoque garantiza que tu chatbot no solo sea funcional, sino también un representante confiable de tu marca.</p>
+                <div class="blog-image-grande">
+                    <img src="media/llm12.png" alt="">
+                </div>
                 <h2>Dante</h2>
                 <p>Dante permite a empresas y desarrolladores construir asistentes virtuales personalizados capaces de responder preguntas, automatizar tareas y mejorar la experiencia del usuario en diversos sectores. Su funcionalidad se extiende al servicio al cliente, la generación de contenido automatizado y la optimización de flujos conversacionales en plataformas digitales.</p>
                 <p>Uno de los aspectos más destacados de Dante es su capacidad para aprender y mejorar continuamente mediante el análisis de conversaciones previas. Esto permite que los chatbots evolucionen con el tiempo, ajustando sus respuestas y optimizando su desempeño para satisfacer mejor las necesidades de los usuarios.</p>
