--- a/ia/speech.html
+++ b/ia/speech.html
@@ -101,7 +101,7 @@ except sr.UnknownValueError:
 except sr.RequestError:
     print("Error con el motor de reconocimiento.")</div>
                 <p>Este código carga un archivo de audio en formato WAV, lo procesa con PocketSphinx y devuelve el texto reconocido. Es una opción útil para proyectos que requieren reconocimiento de voz sin conexión a internet.</p>
-                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/SpeechRecognition/SpeechRecognition.ipynb" target="blank">aquí</a> para ver algunos ejemplos de uso con SpeechRecognition.</p>
+                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/SpeechRecognition/SpeechRecognition.ipynb" target="blank">aquí</a> para ver algunos ejemplos de uso con Reconocimiento de voz.</p>
                 <div class="blog-image-grande">
                     <img src="media/speech1.jpg" alt="">
                 </div>
