--- a/ia/speech.html
+++ b/ia/speech.html
@@ -47,7 +47,7 @@
                     <img src="media/speech3.png" alt="">
                 </div>
                 <h6>Procesamiento de Voz</h6>
-                <p>El procesamiento de voz en SpeechRecognition implica la conversión de señales de audio en texto. Para lograrlo, se toman en cuenta varios factores técnicos:</p>
+                <p>El procesamiento de voz implica la conversión de señales de audio en texto. Para lograrlo, se toman en cuenta varios factores técnicos:</p>
                 <ul>
                     <li><marcador class="resaltado8">Sample Rate: </marcador>Indica la cantidad de muestras por segundo en un archivo de audio. Un valor común es 44.1 kHz (44,100 muestras por segundo).</li>
                     <li><marcador class="resaltado8">Sample Width: </marcador>Representa el número de bytes utilizados para almacenar cada muestra de audio.</li>
@@ -70,7 +70,7 @@
                 <div class="contenedor">
                     <div class="etiqueta">Para instalar la librería, simplemente ejecuta el siguiente comando en tu terminal:</div>
                     <div class="comandos">
-                      <input type="text" class="text" value="pip install SpeechRecognition" oninput="ajustarAncho(this)">
+                      <input type="text" class="text" value="pip install speechrecognition" oninput="ajustarAncho(this)">
                       <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
