--- a/ia.html
+++ b/ia.html
@@ -101,6 +101,10 @@
             <img src="media/imagen3.png" alt="Reconocimiento de Voz" class="article-image">
             <h2><a href="ia/speech.html">Reconocimiento de Voz</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen3.png" alt="NLP" class="article-image">
+            <h2><a href="ia/nlp.html">NLP</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen3.png" alt="En proceso" class="article-image">
