--- a/devops.html
+++ b/devops.html
@@ -65,6 +65,10 @@
             <img src="media/imagen38.svg" alt="Kubernetes" class="article-image">
             <h2><a href="devops/kubernetes.html">Kubernetes</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen38.svg" alt="ELK Stack" class="article-image">
+            <h2><a href="devops/elk.html">ELK Stack</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen38.svg" alt="En proceso" class="article-image">
