--- a/devops/redis.html
+++ b/devops/redis.html
@@ -533,7 +533,8 @@
                     </div>
                 </div>
                 <p>Luego, puedes crear un cliente Redis en Python de la siguiente manera:</p>
-                <div class="archivo">import redis
+                <div class="archivo">
+import redis
 
 # Conectar a Redis
 r = redis.Redis(host='localhost', port=6379, db=0)
