--- a/devops/elk.html
+++ b/devops/elk.html
@@ -441,7 +441,7 @@ CGroup: /system.slice/elasticsearch.service
                         </div>
                     </section>
                 </div>
-                <p>❏ Para recuperar un documento específico por su ID:</p>
+                <p>❏ Si quieres borrar un documento por su ID:</p>
                 <div id="terminal">
                     <section id="terminal__bar">
                         <div id="bar__buttons">
@@ -461,6 +461,7 @@ CGroup: /system.slice/elasticsearch.service
                         </div>
                     </section>
                 </div>
+                <p>Esto elimina el documento con ID 1 del índice test.</p>
                 <p>❏ Puedes obtener solo una parte de los resultados con size y from:</p>
                 <div id="terminal">
                     <section id="terminal__bar">
