--- a/ia/nlp.html
+++ b/ia/nlp.html
@@ -60,7 +60,8 @@
                 <h2>Tokenización</h2>
                 <p>La tokenización es el proceso de dividir un texto en unidades más pequeñas llamadas tokens. Un token puede ser una palabra, un signo de puntuación o incluso una oración.</p>
                 <p>Ejemplo con SpaCy:</p>
-                <div class="archivo">import spacy
+                <div class="archivo">
+import spacy
 
 nlp = spacy.load("en_core_web_sm")
 doc = nlp("El NLP es fascinante y muy útil.")
@@ -80,7 +81,8 @@ for token in doc:
                 <h2>Stemming</h2>
                 <p>El stemming es la reducción de las palabras a su raíz mediante reglas heurísticas. No siempre produce palabras con significado real.</p>
                 <p>Ejemplo con NLTK:</p>
-                <div class="archivo">from nltk.stem import PorterStemmer
+                <div class="archivo">
+from nltk.stem import PorterStemmer
 stemmer = PorterStemmer()
 print(stemmer.stem("running"))  
 
@@ -90,7 +92,8 @@ print(stemmer.stem("running"))
                 <h2>Lemmatization</h2>
                 <p>La lemmatización es más avanzada, ya que reduce una palabra a su forma base considerando su contexto gramatical.</p>
                 <p>Ejemplo con SpaCy:</p>
-                <div class="archivo">import spacy
+                <div class="archivo">
+import spacy
 nlp = spacy.load("en_core_web_sm")
 doc = nlp("running runs ran")
 for token in doc:
@@ -104,7 +107,8 @@ for token in doc:
                 <h2>POS Tagging (Part of Speech Tagging)</h2>
                 <p>El etiquetado de partes del discurso (POS Tagging) asigna una categoría gramatical a cada palabra de un texto.</p>
                 <p>Ejemplo con SpaCy:</p>
-                <div class="archivo">import spacy
+                <div class="archivo">
+import spacy
 
 nlp = spacy.load("en_core_web_sm")
 doc = nlp("The cat sat on the mat.")
@@ -123,7 +127,8 @@ for token in doc:
                 <h2>Word Vectors</h2>
                 <p>Los word vectors representan palabras en un espacio multidimensional donde palabras con significado similar están más cercanas.</p>
                 <p>Ejemplo con SpaCy:</p>
-                <div class="archivo">import spacy
+                <div class="archivo">
+import spacy
 
 nlp = spacy.load("en_core_web_md")
 dog = nlp("dog")
@@ -142,7 +147,8 @@ print(dog.similarity(cat))
                     <li><marcador class="resaltado6">NER (Named Entity Recognition): </marcador>Identifica entidades nombradas.</li>
                 </ol>
                 <p>Ejemplo de pipeline en SpaCy:</p>
-                <div class="archivo">import spacy
+                <div class="archivo">
+import spacy
 
 nlp = spacy.load("en_core_web_sm")
 doc = nlp("Barack Obama was the 44th President of the United States.")
@@ -160,7 +166,8 @@ for ent in doc.ents:
                 <h2>Entity Ruler</h2>
                 <p>Permite definir reglas personalizadas para la detección de entidades.</p>
                 <p>Ejemplo en SpaCy:</p>
-                <div class="archivo">from spacy.pipeline import EntityRuler
+                <div class="archivo">
+from spacy.pipeline import EntityRuler
 
 nlp = spacy.blank("en")
 ruler = nlp.add_pipe("entity_ruler")
@@ -175,7 +182,8 @@ print([(ent.text, ent.label_) for ent in doc.ents])
                 <h2>Matcher</h2>
                 <p>El matcher permite buscar patrones específicos en un texto.</p>
                 <p>Ejemplo en SpaCy:</p>
-                <div class="archivo">from spacy.matcher import Matcher
+                <div class="archivo">
+from spacy.matcher import Matcher
 
 nlp = spacy.load("en_core_web_sm")
 matcher = Matcher(nlp.vocab)
@@ -198,7 +206,8 @@ for match_id, start, end in matches:
                 <h2>Expresiones Regulares en NLP</h2>
                 <p>Las regex (expresiones regulares) son útiles para buscar patrones en texto, como correos electrónicos o fechas.</p>
                 <p>Ejemplo:</p>
-                <div class="archivo">import re
+                <div class="archivo">
+import re
 
 text = "My email is example@email.com"
 match = re.search(r'\S+@\S+', text)
